--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "js-sha512": "^0.8.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
@@ -22,6 +25,7 @@
     "@types/nodemon": "^1.19.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
+    "prisma": "^5.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
