--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
 	"version": 2,
+	"buildCommand": "npx prisma db push && npx prisma generate && npm start",
+	"installCommand": "npm install",
 	"builds": [
 		{
 			"src": "./index.ts",
