--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.5",
+    "otp-generator": "^4.0.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
