--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "js-sha512": "^0.8.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -25,9 +26,12 @@
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.8.3",
+    "@types/nodemailer": "^6.4.11",
     "@types/nodemon": "^1.19.3",
+    "@types/otp-generator": "^4.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
+    "otp-generator": "^4.0.1",
     "prisma": "^5.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
