--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.4.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -28,10 +29,8 @@
     "@types/node": "^20.8.3",
     "@types/nodemailer": "^6.4.11",
     "@types/nodemon": "^1.19.3",
-    "@types/otp-generator": "^4.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
-    "otp-generator": "^4.0.1",
     "prisma": "^5.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
